force-app/main/default/objects/noduplicates__Duplicate__c/noduplicates__Duplicate__c.object-meta.xml
<CustomObject>
    <label>Duplicate</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>Duplicate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>