force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Dupes_Amount__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Dupes_Amount__c</fullName>
    <label>Dupes Amount</label>
    <summaryForeignKey>noduplicates__Duplicate_Pair__c.noduplicates__Duplicate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>