force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>