force-app/main/default/objects/noduplicates__Duplicate__c/listViews/noduplicates__All.listView-meta.xml
<ListView>
    <fullName>noduplicates__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>